--- a/202306-202309/46.心之永远的分享.md
+++ b/202306-202309/46.心之永远的分享.md
@@ -4,7 +4,7 @@
 
 下图是git常用命令 分别是：第一个保存；第二个是建立时间点 ；第三个是传过去更新。
 
-![](C:\Users\Administrator\Desktop\自学\learning-through-betting\202306-202309\图片\微信图片_20230827121709.png)
+![](./图片/微信图片_20230827121709.png)
 
 感觉就是把文件分开放 C盘 D盘一回事，只不过它只显示一个盘的文件，另外盘全部隐藏。然后你要操作先要选好盘，恢复也是按照这个盘来恢复，一个盘相当于一个branch（分枝）。
 
